--- a/src/components/SendButton/style.scss
+++ b/src/components/SendButton/style.scss
@@ -1,6 +1,6 @@
-.RecastApp .RecastAppInput {
+/*.RecastApp .RecastAppInput {
   .RecastSendButtonContainer {
     cursor: pointer;
     display: flex;
   }
-}
+}*/
